Do not expose user_id even though it's null always & adding spec declaration
